[tool.poetry]
name = "rpc"
version = "0.1.0"
description = "Rich Presence client for Discord."
authors = ["Keanu <keanutimmermans8@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pypresence = "^4.2.0"
flake8 = "^3.8.4"
autopep8 = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
